2001-09-19  Derek Price  <dprice@collab.net>

	* rcs.c (rcsbuf_valpolish_internal): Restore one of the
	"if ( ... ) abort();" sequences since it seems to check the validity of
	the RCS file rather than for a programming error.  Also added a FIXME
	comment to the effect that we should explain the RCS file error to the
	user as such if it is such.
	(Thanks to Larry Jones  <scjones@sdrc.com>.)

2001-09-19  Derek Price  <dprice@collab.net>

	* rcs.c (rcsbuf_getkey, rcsbuf_valpolish_internal): Replace some code
	of the form "if ( ... ) abort();" with equivalent calls to assert().

2001-09-17  Derek Price  <dprice@collab.net>

	* myndbm.c (mydbm_load_file): Fix buffer overflow error and make error
	messages more informative.
	* sanity.sh (modules6): New test.
	(Original report from Taska <taska@collab.net> and others.)

2001-09-14  Derek Price  <dprice@collab.net>

	* logmsg.c (do_verify): Dispose memory when finished with it.

2001-09-07  Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (notify_contents): In the example, move the %s to
	the end since many, if not most, versions of mail insist on
	options coming before addresses.

2001-09-06  Derek Price  <dprice@collab.net>

	* login.c (login): Deal with NULL return value from getpass.

2001-09-04  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with automake 1.5.
	* stamp-h2.in: Ditto.

2001-09-04  Derek Price  <dprice@collab.net>

	* main.c (main): Fix empty CVSROOT message to specify `valid' instead
	of `legal'.

2001-09-04  Derek Price  <dprice@collab.net>

	* server.c (pserver_authenticate_connection): Back out changes from the
	30th and...
	* getline.c (getstr): init the buffer instead.

2001-08-31  Derek Price  <dprice@collab.net>

	* Makefile.in: Backed out accidental commit from yesterday.

2001-08-30  Derek Price  <dprice@collab.net>

	* server.c (pserver_authenticate_connection): Don't print from the
	NULL pointer in the error message string in the case where the client
	didn't send any data.